squid-users/2025-September.txt
From gkinkie at gmail.com  Tue Sep  9 20:38:42 2025
From: gkinkie at gmail.com (Francesco Chemolli)
Date: Tue, 9 Sep 2025 21:38:42 +0100
Subject: [squid-users] [NOC] Squid configuration for application running
 in a docker container
In-Reply-To: <BN2P110MB1745DDDB7DFB3C208FEF58E0AD02A@BN2P110MB1745.NAMP110.PROD.OUTLOOK.COM>
References: <BN2P110MB1745DDDB7DFB3C208FEF58E0AD02A@BN2P110MB1745.NAMP110.PROD.OUTLOOK.COM>
Message-ID: <CA+Y8hcNHNk9puBt=kT-LzV4Bfx_TztKJ6UHVb2c7rbmqY3ap9A@mail.gmail.com>

Hi,
  is Squid running in the same docker container as the application?
Have you tried using a non-loopback address to connect to squid?

On Sun, Sep 7, 2025 at 10:49?PM Somdatta.Nath at gd-ms.com
<Somdatta.Nath at gd-ms.com> wrote:
>
> Hello,
>
>
>
> I have downloaded squid proxy application to test java spring webclient proxy setting.  When I am running the application as a java application, I am able to modify squid.conf and pass the netty reactor http request via proxy tunnel.  But when I am running the application in a docker container, the connection to proxy (http:127.0.0.1:3128) is getting refused.
>
>
>
> I tried to allow all the traffic as well as allow docker subnet. I have used the following rules.
>
> #
>
> # Recommended minimum configuration:
>
> #
>
> # Prefer IPv4 addresses first
>
> dns_v4_first on
>
>
>
> # Example rule allowing access from your local networks.
>
> # Adapt to list your (internal) IP networks from where browsing
>
> # should be allowed
>
> acl localnet src 10.89.0.0/24           # podman kube subnet
>
> acl localnet src 0.0.0.1-0.255.255.255  # RFC 1122 "this" network (LAN)
>
> acl localnet src 10.0.0.0/8             # RFC 1918 local private network (LAN)
>
> acl localnet src 100.64.0.0/10          # RFC 6598 shared address space (CGN)
>
> acl localnet src 169.254.0.0/16         # RFC 3927 link-local (directly plugged) machines
>
> #acl localnet src 172.16.0.0/12         # RFC 1918 local private network (LAN)
>
> #acl localnet src 192.168.0.0/16                # RFC 1918 local private network (LAN)
>
> #acl localnet src fc00::/7              # RFC 4193 local private network range
>
> #acl localnet src fe80::/10             # RFC 4291 link-local (directly plugged) machines
>
> acl localhost src 127.0.0.1/32
>
> acl all src all
>
> #acl all src 0.0.0.0/0
>
> #acl to_localhost  dst 127.0.0.1/32
>
> #acl udlsimulator dst 127.0.0.1/32
>
>
>
> acl SSL_ports port 443
>
> acl Safe_ports port 80          # http
>
> acl safe_ports port 8080
>
> acl Safe_ports port 21          # ftp
>
> acl Safe_ports port 443         # https
>
> acl Safe_ports port 210         # wais
>
> acl Safe_ports port 1025-65535  # unregistered ports
>
> acl Safe_ports port 280         # http-mgmt
>
> acl Safe_ports port 488         # gss-http
>
> acl Safe_ports port 591         # filemaker
>
> acl Safe_ports port 777         # multiling http
>
> acl CONNECT method CONNECT
>
>
>
> #Specify hosts file
>
> hosts_file /etc/hosts
>
>
>
> http_access allow all
>
> http_access allow localnet
>
>
>
>
>
> However, the squid proxy is refusing connection to the docker application
>
>
>
>
>
> Thank you,
>
> Somdatta
>
>
>
> SW Engineer,
>
> 8201 E McDowell Road,
>
> Scottsdale AZ 85257
>
> Ph:480.441.3703
>
>
>
>
>
> This message and/or attachments may include information subject to GDC4S O.M. 1.8.6 and GD Corporate Policy 07-105 and are intended to be accessed only by authorized recipients.  Use, storage and transmission are governed by General Dynamics and its policies. Contractual restrictions apply to third parties.  Recipients should refer to the policies or contract to determine proper handling.  Unauthorized review, use, disclosure or distribution is prohibited.  If you are not an intended recipient, please contact the sender and destroy all copies of the original message.
>
>
>
> _______________________________________________
> NOC mailing list
> NOC at lists.squid-cache.org
> https://lists.squid-cache.org/listinfo/noc



-- 
    Francesco

From moizakuski at gmail.com  Thu Sep 11 09:07:47 2025
From: moizakuski at gmail.com (alex ')
Date: Thu, 11 Sep 2025 12:07:47 +0300
Subject: [squid-users] Error during build of version 7.1 from sources
Message-ID: <CABEut4jgrbK6T9itvMvfddUEAwtzBpSs=Dqwy0f_6E4gp9DPww@mail.gmail.com>

Good afternoon! To build version 7.1, the gcc compiler version 9.1.1
is used. The compiler returned an error during the build process:

gadgets.cc: In function 'std::optional<SBuf> ParseAsUtf8(const ASN1_STRING&)':
gadgets.cc:483:67: error: invalid conversion from 'const ASN1_STRING*'
{aka 'const asn1_string_st*'} to 'ASN1_STRING*' {aka
'asn1_string_st*'} [-fpermissive]
  483 |     const auto conversionResult =
ASN1_STRING_to_UTF8(&utfBuffer, &asnBuffer);
      |
   ^~~~~~~~~~
      |                                                                   |
      |
   const ASN1_STRING* {aka const asn1_string_st*}
In file included from ../../compat/openssl.h:29,
                 from ../../src/security/LockingPointer.h:18,
                 from ../../src/security/forward.h:15,
                 from ../../src/security/ErrorDetail.h:15,
                 from ../../src/security/Io.h:13,
                 from gadgets.cc:15:
/usr/include/openssl/asn1.h:1000:59: note:   initializing argument 2
of 'int ASN1_STRING_to_UTF8(unsigned char**, ASN1_STRING*)'
 1000 | int ASN1_STRING_to_UTF8(unsigned char **out, ASN1_STRING *in);
      |                                              ~~~~~~~~~~~~~^~
gadgets.cc: In function 'bool addAltNameWithSubjectCn(Security::CertPointer&)':
gadgets.cc:551:95: error: invalid conversion from 'const char*' to
'char*' [-fpermissive]
  551 |     const auto ext = X509V3_EXT_conf_nid(nullptr, nullptr,
NID_subject_alt_name, altName.c_str());
      |
                  ~~~~~~~~~~~~~^~
      |
                               |
      |
                               const char*
In file included from ../../src/ssl/gadgets.h:34,
                 from ../../src/AccessLogEntry.h:31,
                 from ../../src/auth/UserRequest.h:14,
                 from ../../src/HttpRequest.h:24,
                 from ../../src/ssl/ErrorDetailManager.h:13,
                 from ../../src/security/ErrorDetail.h:19,
                 from ../../src/security/Io.h:13,
                 from gadgets.cc:15:
/usr/include/openssl/x509v3.h:613:28: note:   initializing argument 4
of 'X509_EXTENSION* X509V3_EXT_conf_nid(lhash_st_CONF_VALUE*,
X509V3_CTX*, int, char*)'
  613 |         int ext_nid, char *value);
      |                      ~~~~~~^~~~~

I build on CentOS 6.10 with and using the latest devtoolset-9 package

From gkinkie at gmail.com  Thu Sep 11 09:47:44 2025
From: gkinkie at gmail.com (Francesco Chemolli)
Date: Thu, 11 Sep 2025 10:47:44 +0100
Subject: [squid-users] Error during build of version 7.1 from sources
In-Reply-To: <CABEut4jgrbK6T9itvMvfddUEAwtzBpSs=Dqwy0f_6E4gp9DPww@mail.gmail.com>
References: <CABEut4jgrbK6T9itvMvfddUEAwtzBpSs=Dqwy0f_6E4gp9DPww@mail.gmail.com>
Message-ID: <CA+Y8hcOjrPBaZmEr-uXb1HPcSk3cHjxPLRp7wwpi07ncfNz4AA@mail.gmail.com>

Hi,
  Centos-6 has been EOLed years ago. Any chance for you to test on a
more modern version of the OS?
Also, could you share the configure flags you used?

On Thu, Sep 11, 2025 at 10:07?AM alex ' <moizakuski at gmail.com> wrote:
>
> Good afternoon! To build version 7.1, the gcc compiler version 9.1.1
> is used. The compiler returned an error during the build process:
>
> gadgets.cc: In function 'std::optional<SBuf> ParseAsUtf8(const ASN1_STRING&)':
> gadgets.cc:483:67: error: invalid conversion from 'const ASN1_STRING*'
> {aka 'const asn1_string_st*'} to 'ASN1_STRING*' {aka
> 'asn1_string_st*'} [-fpermissive]
>   483 |     const auto conversionResult =
> ASN1_STRING_to_UTF8(&utfBuffer, &asnBuffer);
>       |
>    ^~~~~~~~~~
>       |                                                                   |
>       |
>    const ASN1_STRING* {aka const asn1_string_st*}
> In file included from ../../compat/openssl.h:29,
>                  from ../../src/security/LockingPointer.h:18,
>                  from ../../src/security/forward.h:15,
>                  from ../../src/security/ErrorDetail.h:15,
>                  from ../../src/security/Io.h:13,
>                  from gadgets.cc:15:
> /usr/include/openssl/asn1.h:1000:59: note:   initializing argument 2
> of 'int ASN1_STRING_to_UTF8(unsigned char**, ASN1_STRING*)'
>  1000 | int ASN1_STRING_to_UTF8(unsigned char **out, ASN1_STRING *in);
>       |                                              ~~~~~~~~~~~~~^~
> gadgets.cc: In function 'bool addAltNameWithSubjectCn(Security::CertPointer&)':
> gadgets.cc:551:95: error: invalid conversion from 'const char*' to
> 'char*' [-fpermissive]
>   551 |     const auto ext = X509V3_EXT_conf_nid(nullptr, nullptr,
> NID_subject_alt_name, altName.c_str());
>       |
>                   ~~~~~~~~~~~~~^~
>       |
>                                |
>       |
>                                const char*
> In file included from ../../src/ssl/gadgets.h:34,
>                  from ../../src/AccessLogEntry.h:31,
>                  from ../../src/auth/UserRequest.h:14,
>                  from ../../src/HttpRequest.h:24,
>                  from ../../src/ssl/ErrorDetailManager.h:13,
>                  from ../../src/security/ErrorDetail.h:19,
>                  from ../../src/security/Io.h:13,
>                  from gadgets.cc:15:
> /usr/include/openssl/x509v3.h:613:28: note:   initializing argument 4
> of 'X509_EXTENSION* X509V3_EXT_conf_nid(lhash_st_CONF_VALUE*,
> X509V3_CTX*, int, char*)'
>   613 |         int ext_nid, char *value);
>       |                      ~~~~~~^~~~~
>
> I build on CentOS 6.10 with and using the latest devtoolset-9 package
> _______________________________________________
> squid-users mailing list
> squid-users at lists.squid-cache.org
> https://lists.squid-cache.org/listinfo/squid-users



-- 
    Francesco

